Fixed one typo in paper.tex
What can I say?

--- a/source/tex/paper.tex
+++ b/source/tex/paper.tex
@@ -981,7 +981,7 @@ The following results were obtained from equation \eqref{eqn:GammaRiemann}
 \vskip 10pt
 
 The following results were obtained from equation \eqref{eqn:RabcdPartials}. Note that by
-inspection of these reulst and those above it is easy to verify the claim made in
+inspection of these results and those above it is easy to verify the claim made in
 section (\ref{sec:MetricRNC}) that the connection terms that arise in
 $R^{a}{}_{(bc{\Dot d};\ue)}$ are always of the form $\Gamma^{p}{}_{q(r,\us)}$.
 %
