Minor housekeeping. No major changes.
Fixed a few typos in some of the tex and sh files.

--- a/source/cadabra/dGamma.tex
+++ b/source/cadabra/dGamma.tex
@@ -73,7 +73,7 @@ The first few results are
 % =================================================================================================
 \section*{Stage 2: Impose Riemann normal coordinates}
 
-Here we impose the RNC conition by setting the $\Gamma^{a}{}_{bc}$ to zero (but not their derivatives).
+Here we impose the RNC condition by setting the $\Gamma^{a}{}_{bc}$ to zero (but not their derivatives).
 
 \begin{dgroup*}
    \begin{dmath*} A^{b} A^{c} \Gamma^a{}_{d(b,c)} = \cdb{dGamma01.201} \end{dmath*}
@@ -82,7 +82,7 @@ Here we impose the RNC conition by setting the $\Gamma^{a}{}_{bc}$ to zero (but 
 \end{dgroup*}
 
 % =================================================================================================
-\section*{Stage 3: Replace partial derivatives $\Gamma$ with partial derivatives $R$}
+\section*{Stage 3: Replace partial derivatives of $\Gamma$ with partial derivatives of $R$}
 
 The key point to note is that the partial derivatives of $\Gamma$ on the right hand side are all
 symmetrized in exactly the same manner as the partial derivatives on the left hand side. Thus
@@ -248,7 +248,7 @@ This is just simple reformatting.
 \clearpage
 
 % =================================================================================================
-\section*{Stage 3: Replace partial derivatives $\Gamma$ with partial derivatives $R$}
+\section*{Stage 3: Replace partial derivatives of $\Gamma$ with partial derivatives of $R$}
 
 \begin{cadabra}
    # use lower equations to eliminate partial derivs of Gamma from rhs
