--- a/source/cadabra/dRabcd.tex
+++ b/source/cadabra/dRabcd.tex
@@ -498,6 +498,8 @@ terms of the symmetrized covariant derivatives of $R_{abcd}$.
    end_stage_3 = time.time()
 \end{cadabra}
 
+\clearpage
+
 \begin{dgroup*}
    \begin{dmath*} \cdb*{dBab01.301} \end{dmath*}
    \begin{dmath*} \cdb*{dBab02.301} \end{dmath*}
@@ -770,8 +772,10 @@ terms of the symmetrized covariant derivatives of $R_{abcd}$.
    \begin{dmath*} \cdb*{dRabcd02.701} \end{dmath*}
    \begin{dmath*} \cdb*{dRabcd03.701} \end{dmath*}
    \begin{dmath*} \cdb*{dRabcd04.701} \end{dmath*}
-   \begin{dmath*} \cdb*{dRabcd05.701} \end{dmath*}
+   % \begin{dmath*} \cdb*{dRabcd05.701} \end{dmath*}
 \end{dgroup*}
+
+\clearpage
 
 \begin{dgroup*}
    \begin{dmath*} \cdb*{dRabcd01.702} \end{dmath*}
