--- a/source/cadabra/detg2.tex
+++ b/source/cadabra/detg2.tex
@@ -95,8 +95,8 @@ include the $1/3!$ coeffcient as part of its output.
 
 The following code computes $-\det g$ rather than $\det g$.
 
-{\bf Note that Calzetta uses an opposite sign for $R_{abcd}$ so when comparing my results
-against Calzetta do take note of this flipped sign in $R_{abcd}$.}
+{\bf Note} that Calzetta etal. use an opposite sign for $R_{abcd}$ so when comparing the
+following results against Calzetta do take note of this flipped sign in $R_{abcd}$.
 
 \clearpage
 
