Corrected typos on free indices in eqtns. 11.19*
The LaTeX source for eqtns. 11.19* (geodesic-ivp results) had incorrect free indices on the left hand side. The indices were written by hand (not by Cadabra). The Cadabra code/results are unchanged.

--- a/source/cadabra/geodesic-ivp.tex
+++ b/source/cadabra/geodesic-ivp.tex
@@ -94,19 +94,19 @@ We can then construct the Taylor series solution for $x^{a}(s)$
 \section*{The geodesic ivp}
 
 \begin{align*}
-   x^{d}(s) = x^{d}
-            + s {\dot{x}^d}
-            + \frac{s^2}{2!} {\dot{x}^a} {\dot{x}^b} A^{d}_{ab}
-            + \frac{s^3}{3!} {\dot{x}^a} {\dot{x}^b} {\dot{x}^c} A^{d}_{abc}
-            + \frac{s^4}{4!} {\dot{x}^a} {\dot{x}^b} {\dot{x}^c} {\dot{x}^d} A^{d}_{abce}
-            + \frac{s^5}{5!} {\dot{x}^a} {\dot{x}^b} {\dot{x}^c} {\dot{x}^d} {\dot{x}^e} A^{d}_{abcef}
+   x^{a}(s) = x^{a}
+            + s {\dot{x}^a}
+            + \frac{s^2}{2!} {\dot{x}^b} {\dot{x}^c} A^{a}_{bc}
+            + \frac{s^3}{3!} {\dot{x}^b} {\dot{x}^c} {\dot{x}^d} A^{a}_{bcd}
+            + \frac{s^4}{4!} {\dot{x}^b} {\dot{x}^c} {\dot{x}^d} {\dot{x}^e} A^{a}_{bcde}
+            + \frac{s^5}{5!} {\dot{x}^b} {\dot{x}^c} {\dot{x}^d} {\dot{x}^e} {\dot{x}^f} A^{a}_{bcdef}
             + \dotsb
 \end{align*}
 \begin{dgroup*}
-   \begin{dmath*} 360 A^{d}_{ab} = \cdb{sterm2.002} \end{dmath*}
-   \begin{dmath*} 360 A^{d}_{abc} = \cdb{sterm3.002} \end{dmath*}
-   \begin{dmath*}  90 A^{d}_{abce} = \cdb{sterm4.002} \end{dmath*}
-   \begin{dmath*}   3 A^{d}_{abcef} = \cdb{sterm5.002} \end{dmath*}
+   \begin{dmath*} 360 A^{a}_{bc} = \cdb{sterm2.002} \end{dmath*}
+   \begin{dmath*} 360 A^{a}_{bcd} = \cdb{sterm3.002} \end{dmath*}
+   \begin{dmath*}  90 A^{a}_{bcde} = \cdb{sterm4.002} \end{dmath*}
+   \begin{dmath*}   3 A^{a}_{bcdef} = \cdb{sterm5.002} \end{dmath*}
 \end{dgroup*}
 
 \clearpage
