Correct free indices on eqtns 11.19* take 2.
In the previous commit I made the changes (on the free indices) in the sources but forgot to do so in the main paper.tex file. Now fixed. Finally. Sheesh.

--- a/source/tex/paper.tex
+++ b/source/tex/paper.tex
@@ -1028,21 +1028,22 @@ $R^{a}{}_{(bc{\Dot d};\ue)}$ are always of the form $\Gamma^{p}{}_{q(r,\us)}$.
 \mysubsection{Geodesic IVP}
 
 \begin{align}
-   x^{d}(s) ={}& x^{d}
-            + s {{\Dot x}^d}
-            + \frac{s^2}{2!} {{\Dot x}^a} {{\Dot x}^b} A^{d}_{ab}
-            + \frac{s^3}{3!} {{\Dot x}^a} {{\Dot x}^b} {{\Dot x}^c} A^{d}_{abc}
-            + \frac{s^4}{4!} {{\Dot x}^a} {{\Dot x}^b} {{\Dot x}^c}
-                                                       {{\Dot x}^d} A^{d}_{abce}\notag\\
-           &+ \frac{s^5}{5!} {{\Dot x}^a} {{\Dot x}^b} {{\Dot x}^c} {{\Dot x}^d}
-                                                       {{\Dot x}^e} A^{d}_{abcef}
+   x^{a}(s) ={}& x^{a}
+            + s {{\Dot x}^a}
+            + \frac{s^2}{2!} {{\Dot x}^b} {{\Dot x}^c} A^{a}_{bc}
+            + \frac{s^3}{3!} {{\Dot x}^b} {{\Dot x}^c} {{\Dot x}^d} A^{a}_{bcd}
+            + \frac{s^4}{4!} {{\Dot x}^b} {{\Dot x}^c} {{\Dot x}^d}
+                                                       {{\Dot x}^e} A^{a}_{bcde}\notag\\
+           &+ \frac{s^5}{5!} {{\Dot x}^b} {{\Dot x}^c} {{\Dot x}^d}
+                                                       {{\Dot x}^e}
+                                                       {{\Dot x}^f} A^{a}_{bcdef}
             + \BigO{s^6,\eps^6}\tag{11.19}
 \end{align}
 \begin{dgroup*}
-   \dMath{11.19a}{ 360 A^{d}_{ab} = \cdb{ivp62}}{eqn:ivp62}{\hfill}
-   \dMath{11.19b}{ 360 A^{d}_{abc} = \cdb{ivp63}}{eqn:ivp63}{\hskip 0.5cm}
-   \dMath{11.19c}{  90 A^{d}_{abce} = \cdb{ivp64}}{eqn:ivp64}{\hfill}
-   \dMath{11.19d}{   3 A^{d}_{abcef} = \cdb{ivp65}}{eqn:ivp65}{\hfill}
+   \dMath{11.19a}{ 360 A^{a}_{bc} = \cdb{ivp62}}{eqn:ivp62}{\hfill}
+   \dMath{11.19b}{ 360 A^{a}_{bcd} = \cdb{ivp63}}{eqn:ivp63}{\hskip 0.5cm}
+   \dMath{11.19c}{  90 A^{a}_{bcde} = \cdb{ivp64}}{eqn:ivp64}{\hfill}
+   \dMath{11.19d}{   3 A^{a}_{bcdef} = \cdb{ivp65}}{eqn:ivp65}{\hfill}
 \end{dgroup*}
 
 % --------------------------------------------------------------------------------------------
