--- a/source/cadabra/summary.tex
+++ b/source/cadabra/summary.tex
@@ -29,6 +29,8 @@ Also, note the following shorthand for mixed covariant derivatives
 \end{align*}
 and so on.
 
+See for example the Python function {\tts combine_nabla} in {\tts cadabra/dRabcd.tex}.
+
 In terms of $\nabla$ the above MTW definition of $R^{a}{}_{bcd}$ can written as
 \begin{align*}
    \left(\nabla_{cb}-\nabla_{bc}\right) V^{a} = - R^{a}{}_{dbc} V^{d}
