--- a/source/tex/paper.tex
+++ b/source/tex/paper.tex
@@ -698,7 +698,7 @@ This problem has been discussed once before, in section (\ref{sub:CoordsBVP}). U
    = x^{a}
    + s \dotx^{a}
    + \frac{1}{24} s^2 {\Dot x}^b {\Dot x}^c \Bigl(\cdb{ivp42}\Bigr)
-   + \frac{1}{12} s^3 {\Dot x}^b {\Dot x}^c {\Dot x}^d \cdb{ivp43}
+   + \frac{1}{12} s^3 {\Dot x}^b {\Dot x}^c {\Dot x}^d \bigl(\cdb{ivp43}\bigr)
    + \BigO{s^4,\eps^4}\end{dmath*}
 %
 % --------------------------------------------------------------------------------------------
@@ -989,7 +989,7 @@ The following results were obtained from equation \eqref{eqn:GammaRiemann}
 \end{dgroup*}
 
 % --------------------------------------------------------------------------------------------
-\mysubsection{Symmetrised partial derivatives of the%
+\mysubsection{Symmetrised partial derivatives of the %
               Riemann curvature tensor.}\label{sub:partialRabcd}
 
 \vskip 5pt
